--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
+.env.prod
+.env.dev
 .env.development.local
 .env.test.local
 .env.production.local
